# MCP-image-gen

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_mcp.py  test_replicate.py
src/image_generator/: __init__.py  server.py
